--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="pl">
@@ -6,11 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atrakcje</title>
+    <link href='https://use.fontawesome.com/releases/v5.0.6/css/all.css' rel='stylesheet'>
+    <style>
+    .leaflet-container {
+        
+        height: 100vh;
+        width: 100%;
+        {% comment %} margin-top: 3%;
+        margin-left:5%; {% endcomment %}
+    }
+    </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+   crossorigin=""/>
 </head>
 <body>
     <div id="app"></div>
-    <div id="root"></div>
     <script src="{% static "frontend/main.js" %}"></script>
-    
 </body>
 </html>
