--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -1,8 +1,8 @@
 .app{
     display: grid;
     grid-template-columns: 0.2fr 3fr;
-    grid-template-rows: 0.5fr 4fr 1fr;
-    background-color: yellow;
+    grid-template-rows: 0.5fr 80vh 1fr;
+    // background-color: white;
     height: 100%;
     width: 100%;
 }
@@ -12,12 +12,12 @@
     background-color: white;
     border-bottom: solid 3px;
 }
- .option{
-    grid-column: 1/2;
-    grid-row: 2/3;
-}
+//  .option{
+//     grid-column: 1/2;
+//     grid-row: 2/3;
+// }
 .body{
-    grid-column: 2/3;
+    grid-column: 1/3;
     grid-row: 2/3;
 }
 .footer{
