--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -1,7 +1,7 @@
 .app{
     display: grid;
     grid-template-columns: 0.2fr 3fr;
-    grid-template-rows: 0.5fr 80vh 1fr;
+    grid-template-rows: 0.5fr 700px 1fr;
     // background-color: white;
     height: 100%;
     width: 100%;
