--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,27 +1,47 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atrakcje</title>
     <link href='https://use.fontawesome.com/releases/v5.0.6/css/all.css' rel='stylesheet'>
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.3/leaflet.draw.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.3/leaflet.draw.css" />
     <style>
-    .leaflet-container {
-        
-        height: 100vh;
-        width: 100%;
-        {% comment %} margin-top: 3%;
-        margin-left:5%; {% endcomment %}
-    }
+        .leaflet-container {
+
+            height: 100%;
+            width: 100%;
+
+                {
+                % comment %
+            }
+
+                {
+                % comment %
+            }
+
+            margin-top: 3%;
+            margin-left:5%;
+
+                {
+                % endcomment %
+            }
+
+                {
+                % endcomment %
+            }
+        }
     </style>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
-   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-   crossorigin=""/>
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
 </head>
+
 <body>
     <div id="app"></div>
     <script src="{% static "frontend/main.js" %}"></script>
 </body>
+
 </html>
