--- a/frontend/src/sass/Body.scss
+++ b/frontend/src/sass/Body.scss
@@ -1,50 +1,73 @@
+@mixin small-phone{
+    @media (max-width: 450px){@content;}
+}
+@mixin for-phone-only {
+    @media (max-width: 599px) { @content; }
+  }@mixin for-tablet-portrait-up {
+    @media (min-width: 600px) { @content; }
+  }@mixin for-tablet-landscape-up {
+    @media (min-width: 900px) { @content; }
+  }@mixin for-desktop-up {
+    @media (min-width: 1200px) { @content; }
+  }@mixin for-big-desktop-up {
+    @media (min-width: 1800px) { @content; }
+  }
+
 .body__elements{
     display:grid;
     height:100%;
     width: 100%;
     grid-template-rows: 800px;
-    // &__color{
-    //     background-color: yellow;
-    // }
     &__option{
         
         display: grid;
         background-color:blue;
         grid-column: 1/2;
         grid-row: 1/2;
-        
-        // &__road{
-        //     position: absolute;
-        //     // grid-column: 1/2;
-        //     // grid-row: 1/2;
-        //     top:15%;
-        //     left:10%;
-            
-        // }
+        &__road{
+            display:flex;
+            @include for-tablet-landscape-up{
+                min-width: 450px;
+            }
+            width:100%;
+            justify-content:center;
+        }
     }
     &__frame{
         display: grid;
         height: 700px;
         &__main{
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+            display:flex;
+            flex-direction: row;
+            @include for-phone-only{
+                flex-direction: column-reverse;
+            }
+            @include for-tablet-portrait-up{
+                flex-direction: column-reverse;
+            }
+            @include for-tablet-landscape-up{
+                flex-direction: row;
+            }
         }
         &__options{
             display: grid;
-            grid-column: 1/2;
-            // top: 20%;
-            // justify-content: center;
-            // align-items: center;
+            @include for-desktop-up{
+                grid-column: 2/3;
+                grid-row: 2/3
+            }
         }
         &__map{
-            display: grid;
-            justify-content: center;
-            align-items: center;
+            position: relative;
+            width:100%;
+            height:100vh;
+            @include for-desktop-up{
+                grid-column: 1/2;
+                grid-row: 1/2
+            }
         }
     }
 }
 .leaflet-container{
-    height:600px;
-    width:1000px;
-    position: relative;
+    margin:0;
+    position: absolute;
 }
