--- a/frontend/src/sass/Road.scss
+++ b/frontend/src/sass/Road.scss
@@ -1,18 +1,27 @@
+@mixin small-phone{
+    @media (max-width: 450px){@content;}
+}
+@mixin for-phone-only {
+    @media (max-width: 599px) { @content; }
+  }@mixin for-tablet-portrait-up {
+    @media (min-width: 600px) { @content; }
+  }@mixin for-tablet-landscape-up {
+    @media (min-width: 900px) { @content; }
+  }@mixin for-desktop-up {
+    @media (min-width: 1200px) { @content; }
+  }@mixin for-big-desktop-up {
+    @media (min-width: 1800px) { @content; }
+  }
 .road__suggestions{
     position: relative;
     display:grid;
-    // width: 80%;
     background-color: #131d2d;
+    min-width: 450px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 12fr;
     border: solid 3px black;
     height: 600px;
-    width: 70%;
-    top: 7%;
-    left:15%;
-    
-   
-   
+    width:100%;
     
 }
 .road{
