--- a/frontend/src/sass/Body.scss
+++ b/frontend/src/sass/Body.scss
@@ -12,6 +12,9 @@
   }@mixin for-big-desktop-up {
     @media (min-width: 1800px) { @content; }
   }
+  @mixin for-tablet-min{
+      @media (max-width: 900px){@content}
+  }
 
 .body__elements{
     display:grid;
@@ -34,11 +37,12 @@
         }
     }
     &__frame{
-        display: grid;
+        // display: grid;
         height: 700px;
         &__main{
             display:flex;
             flex-direction: row;
+            position: relative;
             @include for-phone-only{
                 flex-direction: column-reverse;
             }
@@ -48,21 +52,33 @@
             @include for-tablet-landscape-up{
                 flex-direction: row;
             }
+            @include for-tablet-min{
+                align-items: center;
+            }
         }
         &__options{
-            display: grid;
-            @include for-desktop-up{
-                grid-column: 2/3;
-                grid-row: 2/3
+            position: absolute;
+            z-index:5;
+            left:0%;
+            bottom: 0%;
+            width:450px;
+            
+            @include for-tablet-min{
+                position:relative;
             }
         }
         &__map{
             position: relative;
             width:100%;
             height:100vh;
+            z-index: 2;
             @include for-desktop-up{
                 grid-column: 1/2;
                 grid-row: 1/2
+            }
+            
+            @include for-tablet-min{
+                height: 80vh;
             }
         }
     }
