--- a/frontend/src/sass/Road.scss
+++ b/frontend/src/sass/Road.scss
@@ -17,11 +17,14 @@
     display:grid;
     background-color: #131d2d;
     min-width: 450px;
+    width:450px;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 12fr;
     border: solid 3px black;
     height: 600px;
     width:100%;
+    max-width: 500px;
+    opacity: 0.9;
     
 }
 .road{
@@ -33,7 +36,24 @@
     grid-column: 1/2;
     color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
-    
+    &__routing{
+        &__delete{
+            text-decoration: solid;
+            text-align: end;
+            width: 100%;
+            p{
+                padding: 0;
+                margin: 0;
+            }
+            p:hover{
+                cursor:pointer; 
+                text-decoration: solid 3px;
+                text-decoration: underline;
+                text-decoration-color: #faa426;
+                color:#faa426;
+            }
+        }
+    }
     // border-right: solid 3px;
 
 }
@@ -71,6 +91,8 @@
 }
 .road__options{
     // display:grid;
+    display: flex;
+    flex-direction: column;
     position: relative;
     background-color: grey;
     grid-column: 1/3;
@@ -79,6 +101,16 @@
     border-radius: 15px;
     font-weight: 800;
     &__point{
+        &__remove{
+            background-color: #faa426;
+            margin-left: 0.5rem;
+            font-weight: 800;
+            border-radius: 10%;
+            height:36px;
+            padding-left:0.5rem;
+            padding-right:0.5rem;
+            
+        }
         &__add{
             margin-left: 5%;
             background-color: #faa426;
@@ -86,6 +118,9 @@
             border-radius: 10%;
             height:36px;
             font-weight: 800;
+        }
+        &__add:hover{
+            cursor:pointer;
         }
         margin-top: 5%;
         height: 15%;
@@ -128,7 +163,7 @@
     }
     input{
         height: 30px;
-        width: 70%;
+        width: 50%;
         margin-left: 3%;
     }
     
@@ -200,4 +235,11 @@
             justify-content: center;
         }
     }
+}
+.leaflet-routing-container{
+    background-color:white;
+    height:350px;
+    max-width: 400px;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
